# IMD

Independent Motion Detection/: CMakeLists.txt  CMakeLists.txt~  Independent Motion Detection.kdev4  main.cpp  moveThread.cpp  moveThread.h  myModule.cpp  myModule.h  observeThread.cpp  observeThread.h
Independent Motion Detection (copy)/: CMakeLists.txt  Independent Motion Detection (copy).kdev4  main.cpp  moveThread.cpp  moveThread.h  myModule.cpp  myModule.h
Independent Motion Detection (copy)/.kdev4/: Independent Motion Detection (copy).kdev4  Independent Motion Detection.kdev4
Independent Motion Detection (copy)/Moveball/: move_ball.cpp
Independent Motion Detection (copy)/app/: app.xml
Independent Motion Detection (copy)/opencv/: CMakeLists.txt  opencvmain.cpp
Independent Motion Detection/Graphs/: roc.py
Independent Motion Detection/ML/: ml.cpp
Independent Motion Detection/Moveball/: CMakeLists.txt~  move_ball.cpp
Independent Motion Detection/Tempo/: main.cpp  moveThread.cpp  moveThread.h  myModule.cpp  myModule.h  opencvmain.cpp
Independent Motion Detection/app/: app.xml  system.xml
Independent Motion Detection/icubVision/: lookAtLocation.cpp
Independent Motion Detection/icubVision/opencv/: main.cpp
Independent Motion Detection/mover/: main.cpp
Independent Motion Detection/opencv/: CMakeLists.txt  opencvmain.cpp
