cmake_minimum_required(VERSION 2.8)
set(PROJECTNAME imd)
project(${PROJECTNAME})
find_package(YARP REQUIRED)
find_package(ICUB REQUIRED)
find_package(ICUBcontrib REQUIRED)
list(APPEND CMAKE_MODULE_PATH ${YARP_MODULE_PATH} ${ICUBCONTRIB_MODULE_PATH})
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ICUB_MODULE_PATH})
include_directories(${ICUB_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS})
include(ICUBcontribHelpers)
include(ICUBcontribOptions)
icubcontrib_set_default_prefix()
file(GLOB source *.cpp)
file(GLOB header *.h)
add_executable(${PROJECTNAME} ${source} ${header})



target_link_libraries(${PROJECTNAME} icubmod ${YARP_LIBRARIES})
# install(TARGETS ${PROJECTNAME} DESTINATION bin)
install(TARGETS ${PROJECTNAME} RUNTIME DESTINATION bin)
icubcontrib_add_uninstall_target()
add_subdirectory(mover)
add_subdirectory(Moveball)
add_subdirectory(opencv)
add_subdirectory(ML)
